--- a/A2/a2.html
+++ b/A2/a2.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>UNO</title>
-<script type="text/javascript" src="a2.js"></script>
+<script src="a2.js"></script>
 </head>
 <body>
 
