--- a/CG/CG.html
+++ b/CG/CG.html
@@ -5,12 +5,12 @@
 <title>Insert title here</title>
 </head>
 <body>
-<a href="https://webuser.hs-furtwangen.de/~melzerem/CG/Aufgaben/Aufgabe3/Aufgabe3.blend" target="_blank">Aufgabe 3</a>
-<a href="https://webuser.hs-furtwangen.de/~melzerem/CG/Aufgaben/Aufgabe3/Bildschirmfoto%202018-10-26%20um%2014.09.16.png" target="_blank">Aufgabe 3 Screenshot</a>
-<a href="https://webuser.hs-furtwangen.de/~melzerem/CG/Aufgaben/Aufgabe2/Aufgabe2.blend" target="_blank">Aufgabe 2.1</a>
-<a href="https://webuser.hs-furtwangen.de/~melzerem/CG/Aufgaben/Aufgabe2/Bildschirmfoto%202018-10-20%20um%2014.53.11.png" target="_blank">Screenshot 2.1</a>
-<a href="https://webuser.hs-furtwangen.de/~melzerem/CG/Aufgaben/Aufgabe2/Jabba.blend" target="_blank">Aufgabe 2.2 Jabba</a>
-<a href="https://webuser.hs-furtwangen.de/~melzerem/CG/Aufgaben/Aufgabe2/Bildschirmfoto%202018-10-20%20um%2014.52.21.png" target="_blank">Screenshot Jabba</a>
+<a href="https://webuser.hs-furtwangen.de/~melzerem/CG/Aufgaben/Aufgabe3/Aufgabe3.blend" target="_blank">Aufgabe 3</a> <br>
+<a href="https://webuser.hs-furtwangen.de/~melzerem/CG/Aufgaben/Aufgabe3/Bildschirmfoto%202018-10-26%20um%2014.09.16.png" target="_blank">Aufgabe 3 Screenshot</a><br>
+<a href="https://webuser.hs-furtwangen.de/~melzerem/CG/Aufgaben/Aufgabe2/Aufgabe2.blend" target="_blank">Aufgabe 2.1</a><br>
+<a href="https://webuser.hs-furtwangen.de/~melzerem/CG/Aufgaben/Aufgabe2/Bildschirmfoto%202018-10-20%20um%2014.53.11.png" target="_blank">Screenshot 2.1</a><br>
+<a href="https://webuser.hs-furtwangen.de/~melzerem/CG/Aufgaben/Aufgabe2/Jabba.blend" target="_blank">Aufgabe 2.2 Jabba</a><br>
+<a href="https://webuser.hs-furtwangen.de/~melzerem/CG/Aufgaben/Aufgabe2/Bildschirmfoto%202018-10-20%20um%2014.52.21.png" target="_blank">Screenshot Jabba</a><br>
 <a href="https://webuser.hs-furtwangen.de/~melzerem/CG/Aufgaben/Aufgabe2/Bildschirmfoto%202018-10-20%20um%2014.51.22.png" target="_blank">Screenshot 2.2 </a>
 </body>
 </html>
