--- a/A2/a2.html
+++ b/A2/a2.html
@@ -3,9 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <title>UNO</title>
+<link rel="stylesheet" type="text/css" href="a2.css">
 <script src="a2.js"></script>
 </head>
 <body>
-
+	<div id="aufnehmen">Aufnehmen</div>
+	<div id="ablage">Ablage</div>
+	<div id="Karte"></div>
 </body>
 </html>
