--- a/A4/a4.html
+++ b/A4/a4.html
@@ -13,6 +13,7 @@
 <title>Weihnachtskonfiguration</title>
 </head>
 <body>
+<form action="https://aufgabe6beispiel.herokuapp.com" method="get">
 	<fieldset id="fieldset">
 
 		<h1>Weihnachtskonfigurator</h1>
@@ -70,5 +71,7 @@
 	</fieldset>
 	<div id="box">
 	<h1>Bestellübersicht</h1>
+	<button type="submit">Bestellen</button>
 	</div>
+	</form>
 </html>
