--- a/A4/a4.html
+++ b/A4/a4.html
@@ -1,77 +1,73 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
 <head>
-<style>
-@import url('https://fonts.googleapis.com/css?family=Quicksand');
-</style>
+<meta charset="utf-8">
+<title>Weihnachtsbaumkonfigurator</title>
 
-<link rel="stylesheet" type="text/css" href="a4.css">
 <script src="a4handler.js"></script>
 <script src="a4code.js"></script>
+ <link rel="stylesheet" type="text/css" href="a4.css">
 
-<meta charset="UTF-8">
-<title>Weihnachtskonfiguration</title>
 </head>
 <body>
-<form action="https://aufgabe6beispiel.herokuapp.com" method="get">
-	<fieldset id="fieldset">
+<form action="https://aufgabe6beispiel.herokuapp.com" method="get"><h1>Weihnachtsbaumkonfigurator </h1>
+<fieldset id="Baumtyp">
+<legend>Baumart</legend>
+</fieldset>
 
-		<h1>Weihnachtskonfigurator</h1>
-		<img src="images/eia weihanchten.jpg">
-		<fieldset class="box">
-			<legend>Baumtyp und Halterung</legend>
-			<h2>Waehlen sie einen Typ Baum aus</h2>
-			<div id="Baumtyp"></div>
-			<h2>Welche Halterung möchten sie dazu?</h2>
-			<div id="Halterung"></div>
-		</fieldset>
-		<fieldset>
-			<legend>Kugeln</legend>
-			<div id="Kugeln"></div>
-		</fieldset>
-		<fieldset>
-		<legend>Lametta</legend>
-			<div id="Lametta"></div>
-		</fieldset>
-		<fieldset >
-		<legend>Kerzentyp</legend>
-			<div id="Kerzentyp"></div>
+<fieldset id="Halterung">
+<legend>Halterungen </legend>
+</fieldset>
 
-		</fieldset>
-		<fieldset>
-		<legend>Kerzenfarbe</legend>
-		<div id="Kerzenfarbe"></div>
-		</fieldset>
-		<fieldset>
-			<legend>Lieferoptionen</legend>
-			<h2>Mit welcher Lieferoption soll das Paket versendet werden?</h2>
-			<select name="Delivery" id="delivery">
-				<option value="" disabled selected>Lieferoptionen</option>
-				<option value="Express">Express</option>
-				<option value="Standard">Standardversand</option>
-			</select>
+<fieldset id="Kugeln">
+<legend>Kugeln</legend>
+</fieldset>
 
+<fieldset id="Lametta">
+<legend>Lametta</legend>
+</fieldset>
 
-		</fieldset>
-		<fieldset>
-			<legend>Lieferadresse</legend>
-			<h2>An welche Adresse soll das Paket geliefert werden?</h2>
-			<p>
-				Vorname <input type="text" name="FirstName"
-					placeholder="tippe Vorname hier" required id="firstname" /><br>
-				Name <input type="text" name="LastName"
-					placeholder="tippe Nachname hier" required id="name" /><br>
-				Straße <input type="text" name="Street"
-					placeholder="tippe Straßenname hier" required id="street" /><br>
-				Postleitzahl <input type="text" name="PostalCode"
-					pattern="[0-9, A-Z]{5}" placeholder="bitte 5 Zahlen eingeben"
-					required id="PLZ" /><br> Ort <input type="text" name="Town"
-					placeholder="tippe Stadtname hier" required id="number" /><br>
-		</fieldset>
+<fieldset id="Kerzentyp">
+<legend>Kerzen</legend>
+</fieldset>
+
+<fieldset id="Lieferoptionen">
+		<legend> Lieferoptionen </legend>
+		<input type="radio" name="Radiogroup" value="radio1" id="radio1" />
+		<label for="radio1">UPS</label>
+		<input type="radio" name="Radiogroup" value="radio2" id="radio2"/>
+		<label for="radio2">Hermes</label>
+		<input type="radio" name="Radiogroup" value="radio3" id="radio3"/>
+		<label for="radio3">DHL</label>
 	</fieldset>
-	<div id="box">
-	<h1>Bestellübersicht</h1>
-	<button type="submit">Bestellen</button>
+	
+<fieldset id="Lieferoptionen">
+		<legend> Lieferadresse </legend>
+		Vor- und Zuname
+		<input type="text" name="name" placeholder="Mustermann" required/>
+		<hr/>
+		Straße und Hausnummer
+		<input type="text" name="address" placeholder="Musterstraße 1"/>
+		<hr/>
+		PLZ
+		<input type="text" name="Post Code" pattern="[0-9]{5}" placeholder="123"/>
+		<hr/>
+		Mail
+		<input type="email" name="Mail" placeholder="mustermann@musteradresse.com"/>
+		<hr/>
+		Stadt
+		<input type="text" name="City" placeholder="Musterstadt"/>
+		<hr/>
+		
+		
+		
+		
+	
+	<div id= "cart">
 	</div>
-	</form>
-</html>
+
+	
+<button id="button">Überprüfung</button>
+
+<button type="submit">Jetzt bestellen</button>
+</form>
