--- a/A4/a4.html
+++ b/A4/a4.html
@@ -10,7 +10,8 @@
 
 </head>
 <body>
-<form action="https://aufgabe6beispiel.herokuapp.com" method="get"><h1>Weihnachtsbaumkonfigurator </h1>
+<form action="https://aufgabe6beispiel.herokuapp.com" method="get">
+<h1>Weihnachtsbaumkonfigurator </h1>
 <fieldset id="Baumtyp">
 <legend>Baumart</legend>
 </fieldset>
@@ -59,15 +60,20 @@
 		<input type="text" name="City" placeholder="Musterstadt"/>
 		<hr/>
 		
-		
+	</fieldset>	
 		
 		
 	
 	<div id= "cart">
 	</div>
+	
+	<div> 
+	<h4>Bestellübersicht</h4>
+	<div id="order">
+	</div>
+	</div>
 
 	
 <button id="button">Überprüfung</button>
-
-<button type="submit">Jetzt bestellen</button>
+<button id="Bestellbutton" type="button">Jetzt bestellen</button>
 </form>
