--- a/A8/Client/databaseclient.html
+++ b/A8/Client/databaseclient.html
@@ -20,5 +20,10 @@
 		<button type="button" id="refresh">Refresh</button>
 		<textarea rows="20" cols="90"> </textarea>
 	</fieldset>
+	
+	<fieldset>
+	<input type="text" name="matrikel" id="matrikelnummer">
+	<button id="find" >Find</button>
+	</fieldset>
 </body>
 </html>
