--- a/A8/Client/databaseclient.html
+++ b/A8/Client/databaseclient.html
@@ -22,6 +22,7 @@
 	</fieldset>
 	
 	<fieldset>
+	<legend>Find</legend>
 	<input type="text" name="matrikel" id="matrikelnummer">
 	<button id="find" >Find</button>
 	</fieldset>
