--- a/Abschlussarbeit/a10.html
+++ b/Abschlussarbeit/a10.html
@@ -11,6 +11,9 @@
 <script src="Score.js" type="text/javascript" charset="utf-8"></script>
 <script src="Main.js" type="text/javascript" charset="utf-8"></script>
 
+<script src="databaseclient.js" type="text/javascript" charset="utf-8"></script>
+
+
 <link rel="stylesheet" href="hang.css">
 
 
@@ -25,17 +28,32 @@
 <body>
 	<div>
 		<h1>Bereit für ein Schneeballmassaker?</h1>
-		<input type="text" name="name" placeholder="Gebe deinen Namen ein"
+		<input type="text" name="name" placeholder="Gebe deinen Namen ein" value=""
 			required />
 		<button type="submit" id="Anleitung">Spiel starten</button>
-		
-		<div id="info">Ziel des Spiels ist es, soviele Punkte wie
-			möglich in <b>3 Minuten</b> zu sammeln. Dafür muss man die Kinder, die den
-			Rodelhang hinunterfahren oder hochlaufen versuchen mit dem Schneeball
+
+		<div id="info">
+			Ziel des Spiels ist es, soviele Punkte wie möglich in <b>3
+				Minuten</b> zu sammeln. Dafür muss man die Kinder, die den Rodelhang
+			hinunterfahren oder hochlaufen versuchen mit dem Schneeball
 			abzuwerfen. Für schnellfahrende Kinder gibt es<b>20 Punkte</b>. Für
-			langsame Kinder <b>10 Punkte</b> und für hochlaufende Kinder <b>5 Punkte</b></div>
+			langsame Kinder <b>10 Punkte</b> und für hochlaufende Kinder <b>5
+				Punkte</b>
+		</div>
 	</div>
 
 	<canvas class="invisible" width=1400 height=800></canvas>
+
+	<div id="ende">
+		<h1 id="überschrift">Ende</h1>
+	
+		<fieldset id="yourScore"> 
+		</fieldset>
+		
+		<textarea id="scores" readonly rows="20" cols="40"></textarea>
+
+		<button id="reload">Nochmal Spielen</button>
+	</div>
+
 </body>
 </html>
