--- a/Abschlussarbeit/a10.html
+++ b/Abschlussarbeit/a10.html
@@ -50,7 +50,7 @@
 		<fieldset id="yourScore"> 
 		</fieldset>
 		
-		<textarea id="scores" readonly rows="20" cols="40"></textarea>
+		<textarea id="scores" readonly rows="20" cols="40">Highscore</textarea>
 
 		<button id="reload">Nochmal Spielen</button>
 	</div>
