--- a/Abschlussarbeit/a10.html
+++ b/Abschlussarbeit/a10.html
@@ -28,7 +28,7 @@
 <body>
 	<div>
 		<h1>Bereit für ein Schneeballmassaker?</h1>
-		<input type="text" name="name" placeholder="Gebe deinen Namen ein" value=""
+		<input id="nameinput" type="text" name="name" placeholder="Gebe deinen Namen ein" value=""
 			required />
 		<button type="submit" id="Anleitung">Spiel starten</button>
 
@@ -50,7 +50,7 @@
 		<fieldset id="yourScore"> 
 		</fieldset>
 		
-		<textarea id="scores" readonly rows="20" cols="40">Highscore</textarea>
+		<div id="scores">Highscore</div>
 
 		<button id="reload">Nochmal Spielen</button>
 	</div>
