--- a/Abschlussarbeit/a10.html
+++ b/Abschlussarbeit/a10.html
@@ -28,7 +28,7 @@
 <body>
 	<div>
 		<h1>Bereit für ein Schneeballmassaker?</h1>
-		<input id="nameinput" type="text" name="name" placeholder="Gebe deinen Namen ein" value=""
+		<input id="nameinput" type="text" name="name" placeholder="Gib deinen Namen ein" value=""
 			required />
 		<button type="submit" id="Anleitung">Spiel starten</button>
 
