--- a/Abschlussarbeit/Abschlussaufgabe.html
+++ b/Abschlussarbeit/Abschlussaufgabe.html
@@ -50,7 +50,7 @@
 		<fieldset id="yourScore"> 
 		</fieldset>
 		
-		<div id="scores">Highscore</div>
+		<div id="scores"><div id="Überschrift">Highscore</div></div>
 
 		<button id="reload">Nochmal Spielen</button>
 	</div>
